kustomize-end-to-end/overlays/staging/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
