kustomize-end-to-end/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /stg(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: stg-guestbook-ui
                port:
                  number: 80
